@@ -1,0 +1,1 @@
+OnlyShowIn=GNOME;Mobile
